# yaks

./: .gitignore  .travis.yml  .yaks-ci.sh  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  Makefile  README.md  TODO.md  arch.eps  arch.md  create_access.sh  curl_test_sql.sh  dune-project  pg-names.sh  test.sh  yadmin.py  yaks-be-influxdb.opam  yaks-be-lib.opam  yaks-be-mm.opam  yaks-be-sql.opam  yaks-codec.descr  yaks-codec.opam  yaks-core.descr  yaks-core.opam  yaks-fe-rest-mirage.opam  yaks-fe-rest.opam  yaks-fe-sock.descr  yaks-fe-sock.opam  yaks-sec-dum.opam  yaks.opam  ypub.py  ysub.py
src/api/java/: .gitignore  pom.xml
src/api/java/parent-pom/: pom.xml
src/api/java/yaks-api/: dependency-reduced-pom.xml  pom.xml
src/api/java/yaks-api/src/main/java/is/yaks/: Access.java  Encoding.java  Listener.java  Path.java  Selector.java  Storage.java  Yaks.java
src/api/java/yaks-api/src/main/java/is/yaks/async/: Access.java  Storage.java  Yaks.java
src/api/java/yaks-api/src/main/java/is/yaks/message/: Data.java  Encoding.java  EntityType.java  Message.java  MessageCode.java  MessageImpl.java  Property.java  VLEEncoder.java
src/api/java/yaks-api/src/main/java/is/yaks/socketfe/: Encoding.java  EntityType.java  Message.java  MessageCode.java  Property.java
src/api/java/yaks-api/src/test/java/: configure_storage.sh
src/api/java/yaks-api/src/test/java/com/huawei/camera/: Analytic.java  Camera.java  UserApp.java
src/api/java/yaks-driver-rest/: .classpath  .project  dependency-reduced-pom.xml  pom.xml
src/api/java/yaks-driver-rest/src/main/java/is/yaks/rest/: AccessImpl.java  GsonTypeToken.java  StorageImpl.java  YaksConfiguration.java  YaksImpl.java
src/api/java/yaks-driver-rest/src/main/java/is/yaks/rest/async/: AccessImpl.java  StorageImpl.java  YaksImpl.java
src/api/java/yaks-driver-rest/src/main/java/is/yaks/rest/utils/: AccessCreator.java  GsonTypeToken.java  Utils.java  YaksConfiguration.java
src/api/java/yaks-driver-rest/src/main/java/is/yaks/websocket/: AccessImpl.java  StorageImpl.java  YaksImpl.java
src/api/java/yaks-driver-rest/src/test/java/is/yaks/rest/: AccessTest.java  KeysValuesTest.java  StorageTest.java
src/api/java/yaks-driver-rest/src/test/java/is/yaks/rest/async/: AccessTest.java  AsyncTest.java
src/api/java/yaks-driver-rest/src/test/java/is/yaks/rest/foo/: Foo.java
src/api/java/yaks-driver-rest/test/java/is/yaks/rest/: AccessTest.java  KeysValuesTest.java
src/api/java/yaks-driver-websocket/: .factorypath  dependency-reduced-pom.xml  pom.xml
src/api/java/yaks-driver-websocket/src/main/java/is/yaks/websocket/: AccessImpl.java  StorageImpl.java  YaksImpl.java
src/api/java/yaks-driver-websocket/src/test/java/is/yaks/websocket/: AccessTest.java  SocketClient.java  SocketServer.java  YaksSocketClient.java
src/api/ocaml/: Makefile
src/api/ocaml/client/: Makefile  dune  simple.ml
src/api/ocaml/socket/: Makefile  dune  yaks-api.opam  yaks_api.ml  yaks_api_sock.ml  yaks_api_sock.mli  yaks_sock_access.ml  yaks_sock_access.mli  yaks_sock_driver.ml  yaks_sock_driver.mli  yaks_sock_message.ml  yaks_sock_message.mli  yaks_sock_storage.ml  yaks_sock_storage.mli  yaks_sock_types.ml  yaks_sock_types.mli
src/api/python/: client-sql-rest.sh  client-sql.py  client.py  client_sub.py  crash.py  requirements.txt  setup.py  tox.ini
src/api/python/yaks-api/: messages.py  test.py
src/api/python/yaks_api/: __init__.py  api.py  encoder.py  logger.py  messages.py  mvar.py  path.py  prova.py
src/api/python/yaks_api/tests/: test_messages.py  test_mvar.py  test_path.py  test_vle_encoder.py
src/yaks/: .merlin  dune  jbuild  yaks.ml  yaksc.ml  yaksd.ml
src/yaks-be/yaks-be-influxdb/: dune  influxdb_driver.ml  influxdb_types.ml  yaks_be_influxdb.ml
src/yaks-be/yaks-be-lib/: dune  yaks_be.ml  yaks_be.mli  yaks_storage.ml  yaks_storage.mli  yaks_zenoh_utils.ml
src/yaks-be/yaks-be-mm/: dune  jbuild  mm_types.ml  mm_types.mli  types_signatures.mli  yaks_be_mm.ml  yaks_be_mm.mli  yaks_bef_mm.ml
src/yaks-be/yaks-be-sql/: be_sql_properties.ml  be_sql_property.ml  be_sql_types.ml  caqti_driver.ml  dune  kv_table.ml  legacy_table.ml  yaks-be-sql.opam  yaks_be_sql.ml
src/yaks-codec/: fecmd.atd  fecmd.ml  fecmd.mli  jbuild  yaks_codec.ml
src/yaks-core/: engine.ml  engine.mli  event_lwt.ml  event_stream.ml  event_stream.mli  jbuild  yaks_core.ml  yaks_event.ml
src/yaks-fe-proto/: message.ml
src/yaks-fe-sock/: jbuild  yaks_fe_sock.ml
src/yaks-fe/yaks-fe-rest/: api.adoc  api.html  dune  jbuild  yaks-fe-rest.descr  yaks_fe_rest.ml  yaks_fe_rest.mli  yaks_fe_rest_mvar.ml
src/yaks-fe/yaks-fe-rest-mirage/: dune  dune_no  yaks_fe_rest_mirage.ml
src/yaks-fe/yaks-fe-sock/: dune  jbuild  yaks_event.ml  yaks_fe_sock.ml  yaks_fe_sock.mli  yaks_fe_sock_codec.ml  yaks_fe_sock_codes.ml  yaks_fe_sock_processor.ml  yaks_fe_sock_processor.mli  yaks_fe_sock_sec.ml  yaks_fe_sock_types.ml  yaks_fe_wire.ml  yaks_fe_wsock.ml  yaks_fe_wsock.mli
src/yaks-sec/yaks-sec-dum/: dune  yaks_sec_dum.ml
src/yaks-tools/yaks-cat/: dune  jbuild  yaksc.ml
src/yaks/doc/: fe-sock-proto.md
src/yaks/yaks-core/: dune  engine.ml  engine.mli  jbuild  sEngine.ml  sEngine.mli  selector.ml  selector.mli  stream_lwt.ml  yaks_access.ml  yaks_access.mli  yaks_admin_space.ml  yaks_admin_space.mli  yaks_be.ml  yaks_be.mli  yaks_const.ml  yaks_core.ml  yaks_core_properties.ml  yaks_core_properties.mli  yaks_core_types.ml  yaks_engine.ml  yaks_engine.mli  yaks_event.ml  yaks_fe.ml  yaks_group.ml  yaks_group.mli  yaks_properties.ml  yaks_properties.mli  yaks_property.ml  yaks_property.mli  yaks_sec.ml  yaks_sec.mli  yaks_storage.ml  yaks_storage.mli  yaks_transport.ml  yaks_types.ml  yaks_types.mli  yaks_user.ml  yaks_user.mli  yaks_zenoh_utils.ml  (+2 more)
src/yaks/yaks-core2/: dune  yaks_admin_space.ml  yaks_admin_space.mli  yaks_core2.ml  yaks_core_properties.ml  yaks_core_types.ml  yaks_engine.ml  yaks_engine.mli  yaks_kv_api.mli  yaks_storage.ml
src/yaks/yaks-daemon/: dune  jbuild  yaks_config.atd  yaksd.ml
test/test-yaks-core/: dune  jbuild  test_selector.ml  test_yaks_core.ml
(+27 files in other folders)
