opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Julien Enoch"]
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "git+https://github.com/atolab/yaks.git"
tags:         ["org:adlink-technology"]

version:"0.3.0"
license: "Apache-2.0"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]


depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "yaks-be-lib"  {= "0.3.0"}
]

conflicts: [
  "lwt" {< "4.0.0"}
]
