opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Olivier Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "https://github.com/atolab/yaks.git"
tags:         ["org:adlink-technology"]

version:"0.2.2"
license: "Apache-2.0"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]


depends: [
  "dune"
  "yaks-core"  {>= "0.2.2"}
]

conflicts: [
  "lwt" {< "4.0.0"}
]


available: [ocaml-version >= "4.03.0"]
