opam-version: "1.2"
maintainer:   ["angelo@icorsaro.net" ]
authors:      "Angelo Corsaro"
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "https://github.com/atolab/yaks.git"
tags:         ["org:yaks" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["jbuilder" "build" "-p" yaks-codec "-j" jobs]
]

depends: [
  "jbuilder"  
  "atdgen"
]

available: [ocaml-version >= "4.03.0"]
