opam-version: "1.2"
maintainer:   ["angelo@icorsaro.net" ]
authors:      "Angelo Corsaro"
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "https://github.com/atolab/yaks.git"
tags:         ["org:yaks" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"
  "atdgen"
  "apero-core"
  "apero-net"
  "cmdliner"
  "fmt" 
  "logs" 
  "lwt" 
  "ppx_deriving" 
  "uuidm" 
  "yojson"
  "lwt_ppx"
  "lwt_log"
  "ppx_cstruct"
]

conflicts: [
  "lwt" {< "4.0.0"}
]


available: [ocaml-version >= "4.03.0"]
