opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Olivier Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "git+https://github.com/atolab/yaks.git"
tags:         ["org:adlink-technology"]

version:"0.2.7"
license: "Apache-2.0"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "atdgen"
  "yaks-common" {>= "0.2.7"}
  "zenoh-api" {>= "0.2.5"}
  "apero-core" {>= "0.4.5"}
  "cmdliner"
  "fmt" 
  "logs" 
  "lwt" 
  "ppx_deriving" 
  "uuidm" 
  "yojson" {>= "1.6.0" & <= "1.7.0"}
  "lwt_ppx"
  "lwt_log"
  "ppx_cstruct"
]

conflicts: [
  "lwt" {< "4.0.0"}
]
