opam-version: "1.2"
maintainer:   ["julien.enoch@adlinktech.com" ]
authors:      "Julien Enoch"
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "https://github.com/atolab/yaks.git"
tags:         ["org:yaks" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "@install"]
  ["dune" "install" name]
]


depends: [
  "dune"
  "yaks-core"
  "cohttp-mirage"
]

conflicts: [
  "lwt" {< "4.0.0"}
  "cohttp-mirage" {< "1.0.2"}
]


available: [ocaml-version >= "4.03.0"]
