opam-version: "1.2"
maintainer:   ["julien.enoch@adlinktech.com" ]
authors:      "Julien Enoch"
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "https://github.com/atolab/yaks.git"
tags:         ["org:yaks" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "dune" "-p" name "-j" jobs]
]

depends: [
  "dune"
  "yaks-core"
]

available: [ocaml-version >= "4.03.0"]
