opam-version: "1.2"
maintainer:   ["angelo@icorsaro.net" ]
authors:      "Angelo Corsaro"
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "https://github.com/atolab/yaks.git"
tags:         ["org:yaks" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "dune" "-p" name "-j" jobs]
]

depends: [
  "dune"
  "yaks-core"
]

conflicts: [
  "lwt" {< "4.0.0"}
]

available: [ocaml-version >= "4.03.0"]
