opam-version: "1.2"
maintainer:   ["angelo@icorsaro.net" ]
authors:      "Angelo Corsaro"
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "https://github.com/atolab/yaks.git"
tags:         ["org:yaks" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["jbuilder" "build" "-p" yaks-fe-sock "-j" jobs]
]

depends: [
  "jbuilder"  
  "yaks-core"
  "atdgen"
]

available: [ocaml-version >= "4.03.0"]
