opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Olivier Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "git+https://github.com/atolab/yaks.git"
tags:         ["org:adlink-technology"]

version:"0.2.6"
license: "Apache-2.0"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "@install"]
  ["dune" "install" name]
]


depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "atdgen"
  "yaks-core"    {= "0.2.6"}
  "yaks-fe-rest" {= "0.2.6"}
  "yaks-be-mm"   {= "0.2.6"}
]
