(library
  (name            yaks)
  (public_name     yaks)
  (wrapped         false)
  (libraries       zenoh-router yaks-common yaks-be-lib yaks-be-mm dynload-sys)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord lwt_ppx)))

(rule
  (targets    yaks-plugin.cmxs)
  (deps       (package yaks))
  (action (run ocamlfind ocamlopt
                  -shared
                  -linkall
                  -linkpkg
                  -thread
                  -dontlink zenoh-router
                  -dontlink apero-core
                  -package yaks
                  -o %{targets}
  )))

