(library
  (name           yaks_be_sql)
  (public_name    yaks-be-sql)
  (wrapped        false)
  (libraries      yaks-be-lib caqti caqti-lwt
                  )
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord lwt_ppx)))

(rule
  (targets    yaks-be-sqlite3.cmxs)
  (deps       (package yaks-be-sql))
  (action (run ocamlfind ocamlopt
                  -shared
                  -linkall
                  -linkpkg
                  -thread
                  -dontlink yaks-be-lib
                  -package yaks-be-sql
                  -package caqti-driver-sqlite3
                  -o %{targets}
  )))

(rule
  (targets    yaks-be-mariadb.cmxs)
  (deps       (package yaks-be-sql))
  (action (run ocamlfind ocamlopt
                  -shared
                  -linkall
                  -linkpkg
                  -thread
                  -dontlink yaks-be-lib
                  -package yaks-be-sql
                  -package caqti-driver-mariadb
                  -o %{targets}
  )))

(rule
  (targets    yaks-be-postgresql.cmxs)
  (deps       (package yaks-be-sql))
  (action (run ocamlfind ocamlopt
                  -shared
                  -linkall
                  -linkpkg
                  -thread
                  -dontlink yaks-be-lib
                  -package yaks-be-sql
                  -package caqti-driver-postgresql
                  -o %{targets}
  )))
