opam-version: "1.2"
maintainer:   ["gabriele.baldoni@adlinktech.com" ]
authors:      "Gabriele Baldoni"
homepage:     "https://github.com/atolab/yaks"
bug-reports:  "https://github.com/atolab/yaks/issues/"
dev-repo:     "https://github.com/atolab/yaks.git"
tags:         ["org:yaks" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]


depends: [
  "dune"
  "lwt" {>= "4.0.0"}
  "apero-core" {>= "0.3.0"}
  "apero-net" {>= "0.3.0"}
  "yaks-core"
  "yaks-fe-sock"
]

conflicts: [
  "lwt" {< "4.0.0"}
]

available: [ocaml-version >= "4.03.0"]
